--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
 
     <!-- CONTENIDO PRINCIPAL -->
     <main>
-        <section>
+            <!-- HISTORIA -->
+    <div class="contenedor">
+        <section class="cuadro">
             <h2>Historia</h2>
+        </section>
+        <section class="cuadro">
             <p>
                 El Colegio Nocturno de Grecia brinda oportunidades educativas a jóvenes y adultos
                 que desean finalizar sus estudios y mejorar su calidad de vida.
             </p>
         </section>
+        </div>
 
+        <!-- MISION -->
         <section>
             <h2>Misión</h2>
             <p>
