--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- HEADER -->
     <header>
         <div class="logo-container">
-            <img src="logo.png" alt="Logo Colegio" class="logo">
+            <img src="Resources/logo.png" alt="Logo Colegio" class="logo">
             <h1>Colegio Nocturno de Grecia</h1>
         </div>
 
