--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <main>
             <!-- HISTORIA -->
     <div class="contenedor">
-        <section class="cuadro">
+        <div class="cuadro">
             <h2>Historia</h2>
-        </section>
-        <section class="cuadro">
+        </div>
+        <div class="cuadro">
             <p>
                 El Colegio Nocturno de Grecia brinda oportunidades educativas a jóvenes y adultos
                 que desean finalizar sus estudios y mejorar su calidad de vida.
             </p>
-        </section>
+        </div>
         </div>
 
         <!-- MISION -->
