--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 
     <!-- CONTENIDO PRINCIPAL -->
     <main>
+
+        <section class="hero">
+            <img src="Resources/banner.png" class="hero-img">
+            <div class="hero-texto"> <h2>Bienvenidos al Colegio Nocturno de Grecia</h2> 
+            <p>Oportunidad de estudio y crecimiento personal y profesional al alcance de todos</p>
+            </div>
+        </section>
+
+
             <!-- HISTORIA -->
     <div class="contenedor">
         <div class="cuadro">
