--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <main>
 
         <section class="hero">
-            <img src="Resources/banner.png" class="hero-img">
-            <div class="hero-texto"> <h2>Bienvenidos al Colegio Nocturno de Grecia</h2> 
+            <img src="Resources/banner.png" class="hero-img" alt="banner">
+            <div class="hero-texto"> 
+            <h2>Bienvenidos al Colegio Nocturno de Grecia</h2> 
             <p>Oportunidad de estudio y crecimiento personal y profesional al alcance de todos</p>
             </div>
         </section>
