carrusel de imagenes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <main>
 
         <section class="hero">
-            <img src="Resources/banner.png" class="hero-img" alt="banner">
+            <img src="Resources/banner.png" class="hero-img active" alt="banner">
+            <img src="Resources/banner1.png" class="hero-img" alt="banner1">
+            <img src="Resources/banner2.png" class="hero-img" alt="banner2">
+            <img src="Resources/banner3.png" class="hero-img" alt="banner3>"
             <div class="hero-texto"> 
             <h2>Bienvenidos al Colegio Nocturno de Grecia</h2> 
             <p>Oportunidad de estudio y crecimiento personal y profesional al alcance de todos</p>
@@ -70,6 +73,6 @@
         <p>© 2026 Colegio Nocturno de Grecia - Todos los derechos reservados</p>
         <p>Contacto: lic.nocturnodegrecia@mep.go.cr</p>
     </footer>
-
+<script src="script.js"></script> 
 </body>
 </html>
