--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="Resources/banner3.png" class="hero-img" alt="banner3>"
             <div class="hero-texto"> 
             <h2>Bienvenidos al Colegio Nocturno de Grecia</h2> 
-            <p>Oportunidad de estudio y crecimiento personal y profesional al alcance de todos</p>
+            <p>Oportunidad de estudio, crecimiento personal y profesional al alcance de todos</p>
             </div>
         </section>
 
