--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="Resources/banner.png" class="hero-img active" alt="banner">
             <img src="Resources/banner1.png" class="hero-img" alt="banner1">
             <img src="Resources/banner2.png" class="hero-img" alt="banner2">
-            <img src="Resources/banner3.png" class="hero-img" alt="banner3>"
+            <img src="Resources/banner3.png" class="hero-img" alt="banner3>">
             <div class="hero-texto"> 
             <h2>Bienvenidos al Colegio Nocturno de Grecia</h2> 
             <p>Oportunidad de estudio, crecimiento personal y profesional al alcance de todos</p>
