--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div class="contenedor">
         <div class="cuadro">
             <h2>Historia</h2>
+            <img src="Resources/Icons/Newspaper.svg" class="img" alt="Historia">
         </div>
         <div class="cuadro">
             <p>
@@ -48,26 +49,30 @@
                 que desean finalizar sus estudios y mejorar su calidad de vida.
             </p>
         </div>
-        </div>
+    </div>
 
         <!-- MISION -->
-        <section>
-            <h2>Misión</h2>
-            <p>
-                Ofrecer educación accesible y de calidad, promoviendo valores, responsabilidad
-                y el desarrollo integral de nuestros estudiantes.
-            </p>
-        </section>
-
-        <section>
-            <h2>Visión</h2>
-            <p>
-                Ser una institución líder en educación nocturna, reconocida por su excelencia,
-                inclusión y compromiso con la comunidad.
-            </p>
-        </section>
+    <div class="contenedor">
+        <div class="cuadro">
+            <p>Ofrecer educación accesible y de calidad, promoviendo valores, responsabilidad y el desarrollo integral de nuestros estudiantes.</p>
+        </div>
+        <div class="cuadro">
+            <h2>Mision</h2>
+        </div>
+    </div>
     </main>
 
+     <!-- VISION -->
+    <div class="contenedor">
+        <div class="cuadro">
+            <h2>Vision</h2>
+        </div>
+        <div class="cuadro">
+            <p>
+                Ser una institución líder en educación nocturna, reconocida por su excelencia, inclusión y compromiso con la comunidad.
+            </p>
+        </div>
+    </div>
     <!-- FOOTER -->
     <footer>
         <p>© 2026 Colegio Nocturno de Grecia - Todos los derechos reservados</p>
