--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Colegio Nocturno de Grecia</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -41,7 +42,7 @@
     <div class="contenedor">
         <div class="cuadro">
             <h2>Historia</h2>
-            <img src="Resources/Icons/Newspaper.svg" class="img" alt="Historia">
+            <i class="fa-solid fa-scroll"></i>
         </div>
         <div class="cuadro">
             <p>
