--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="contenedor">
         <div class="cuadro">
             <h2>Historia</h2>
-            <i class="fa-solid fa-scroll"></i>
+            <i class="fa-solid fa-scroll icono-grande"></i>
         </div>
         <div class="cuadro">
             <p>
