--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
         <div class="cuadro">
             <h2>Mision</h2>
+            <i class="fa-solid fa-medal icono-grande"></i>
         </div>
     </div>
     </main>
@@ -67,6 +68,7 @@
     <div class="contenedor">
         <div class="cuadro">
             <h2>Vision</h2>
+            <i class="fa-solid fa-book-open icono-grande"></i>
         </div>
         <div class="cuadro">
             <p>
