--- a/index.html
+++ b/index.html
@@ -41,40 +41,55 @@
             <!-- HISTORIA -->
     <div class="contenedor">
         <div class="cuadro">
-            <h2>Historia</h2>
-            <i class="fa-solid fa-scroll icono-grande"></i>
-        </div>
-        <div class="cuadro">
             <p>
                 El Colegio Nocturno de Grecia brinda oportunidades educativas a jóvenes y adultos
                 que desean finalizar sus estudios y mejorar su calidad de vida.
             </p>
+        </div>
+        <div class="cuadro">
+            <h2>Historia</h2>
+            <i class="fa-solid fa-scroll icono-grande"></i>
         </div>
     </div>
 
         <!-- MISION -->
     <div class="contenedor">
         <div class="cuadro">
-            <p>Ofrecer educación accesible y de calidad, promoviendo valores, responsabilidad y el desarrollo integral de nuestros estudiantes.</p>
-        </div>
-        <div class="cuadro">
             <h2>Mision</h2>
             <i class="fa-solid fa-medal icono-grande"></i>
+        </div>
+        <div class="cuadro">
+            <p>Ofrecer educación accesible y de calidad, promoviendo valores, responsabilidad y el desarrollo integral de nuestros estudiantes.</p>
         </div>
     </div>
 
      <!-- VISION -->
     <div class="contenedor">
         <div class="cuadro">
-            <h2>Vision</h2>
-            <i class="fa-solid fa-book-open icono-grande"></i>
-        </div>
-        <div class="cuadro">
             <p>
                 Ser una institución líder en educación nocturna, reconocida por su excelencia, inclusión y compromiso con la comunidad.
             </p>
         </div>
+        <div class="cuadro">
+            <h2>Vision</h2>
+            <i class="fa-solid fa-book-open icono-grande"></i>
+        </div>
     </div>
+
+    <!-- vALORES -->
+    <section class="layout">
+        <div class="titulo">
+            <h1>Valores Institucionales</h1>
+            <p>Principios que guían nuestra comunidad educativa.</p>
+        </div>
+        <div class="lista">
+            <div class="box"><h2>Respeto</h2><i class="fa-solid fa-handshake icono-grande"></i></div>
+            <div class="box"><h2>Responsabilidad</h2><i class="fa-solid fa-shield icono-grande"></i></div>
+            <div class="box"><h2>Honestidad</h2><i class="fa-regular fa-gem icono-grande"></i></div>
+            <div class="box"><h2>Compromiso</h2><i class="fa-solid fa-dumbbell icono-grande"></i></div>
+        </div>
+    </section>
+
     </main>
 
     
