--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
             <!-- HISTORIA -->
     <div class="contenedor">
-        <div class="cuadro">
+        <div class="cuadro-texto">
             <p>
                 El Colegio Nocturno de Grecia brinda oportunidades educativas a jóvenes y adultos
                 que desean finalizar sus estudios y mejorar su calidad de vida.
             </p>
         </div>
-        <div class="cuadro">
+        <div class="cuadro-titulo">
             <h2>Historia</h2>
             <i class="fa-solid fa-scroll icono-grande"></i>
         </div>
@@ -54,33 +54,32 @@
 
         <!-- MISION -->
     <div class="contenedor">
-        <div class="cuadro">
+        <div class="cuadro-titulo">
             <h2>Mision</h2>
             <i class="fa-solid fa-medal icono-grande"></i>
         </div>
-        <div class="cuadro">
+        <div class="cuadro-texto">
             <p>Ofrecer educación accesible y de calidad, promoviendo valores, responsabilidad y el desarrollo integral de nuestros estudiantes.</p>
         </div>
     </div>
 
      <!-- VISION -->
     <div class="contenedor">
-        <div class="cuadro">
+        <div class="cuadro-texto">
             <p>
                 Ser una institución líder en educación nocturna, reconocida por su excelencia, inclusión y compromiso con la comunidad.
             </p>
         </div>
-        <div class="cuadro">
+        <div class="cuadro-titulo">
             <h2>Vision</h2>
             <i class="fa-solid fa-book-open icono-grande"></i>
         </div>
     </div>
 
-    <!-- vALORES -->
+    <!-- Valores -->
     <section class="layout">
         <div class="titulo">
             <h1>Valores Institucionales</h1>
-            <p>Principios que guían nuestra comunidad educativa.</p>
         </div>
         <div class="lista">
             <div class="box"><h2>Respeto</h2><i class="fa-solid fa-handshake icono-grande"></i></div>
