--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <!-- Valores -->
+    <!-- VALORES -->
     <section class="layout">
         <div class="titulo">
             <h1>Valores Institucionales</h1>
@@ -88,6 +88,35 @@
             <div class="box"><h2>Compromiso</h2><i class="fa-solid fa-dumbbell icono-grande"></i></div>
         </div>
     </section>
+
+    <!--CONTACTO-->
+<section class="contacto-seccion">
+    <h2>Contáctenos</h2>
+
+    <div class="contacto-grid">
+
+        <a href="mailto:colegionocturnogrecia@email.com" class="contacto-item">
+            <i class="fa-solid fa-envelope"></i> <strong>Correo:</strong> colegionocturnogrecia@email.com
+        </a>
+
+        <a href="tel:+50688888888" class="contacto-item">
+            <i class="fa-solid fa-phone"></i> <strong>Teléfono:</strong> +506 8888-8888
+        </a>
+
+        <a href="https://www.facebook.com/" target="_blank" class="contacto-item">
+            <i class="fa-brands fa-facebook"></i> <strong>Facebook:</strong> Colegio Nocturno de Grecia
+        </a>
+
+        <a href="https://www.google.com/maps?q=Grecia,+Alajuela,+Costa+Rica" target="_blank" class="contacto-item">
+            <i class="fa-solid fa-location-dot"></i> <strong>Ubicación:</strong> Grecia, Alajuela, Costa Rica
+        </a>
+
+        <div class="contacto-item">
+            <i class="fa-regular fa-clock"></i> <strong>Horario:</strong> 4:30 pm – 10:00 pm
+        </div>
+
+    </div>
+</section>
 
     </main>
 
